--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ canonifyurls = true
   identifier = "stackoverflow"
   name = "Stack Overflow"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-stack-overflow\"></i>"
-  url = "https://stackoverflow.com/users/636472/kakawait"
+  url = "#"
 
 [[menu.misc]]
   weight = 1
