--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ defaultContentLanguage = "en-jp"
 title = "情報系の学生の旅路"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "hugo-tranquilpeak-theme"
-# googleAnalytics = "UA-123-45"
+googleAnalytics = "UA-112034708-1"
 paginate = 7
 canonifyurls = true
 
