--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseURL = "https://tattsum.github.io/tattsum/"
+baseURL = "https://tattsum.com/"
 languageCode = "ja-jp"
 defaultContentLanguage = "ja-jp"
 title = "情報系の学生の旅路"
