--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,8 @@ baseURL = "https://tattsum.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "情報系の学生の旅路"
-theme = "tranquilpeak-theme"
-disqusShortname = "tranquilpeak-theme"
+theme = "tranquilpeak"
+disqusShortname = "tranquilpeak"
 googleAnalytics = "UA-112034708-1"
 paginate = 7
 canonifyurls = true
